--- a/action.yml
+++ b/action.yml
@@ -32,7 +32,7 @@ branding:
 runs:
   using: 'composite'
   steps:
-    - run: pip install botocore
+    - run: pip install -r requirements.txt
       shell: bash
     - run: python ${{ github.action_path }}/main.py
       shell: bash
